# FSVF

./: .clang-format  .clangd  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
cmake/: fetch_dependencies.cmake  system_checks.cmake
src/: Config.hpp  FSVF.h  FloatUtils.hpp  GenericMethods.hpp  GenericMethodsImpl.hpp  HelperTypes.hpp  LMat3.hpp  LMat3Impl.hpp  LVec3.hpp  Mat4.hpp  Mat4Impl.hpp  Operators.hpp  OperatorsImpl.hpp  Platform.hpp  Shuffles.hpp  Vec4.hpp  Vec4Impl.hpp  VecInternals.hpp  generate_shuffles.hs
test/: Benchmark.cpp  CMakeLists.txt  FloatUtils.cpp  GenericMethods.cpp  Mat4Aux.cpp  Mat4Tests.cpp  Operators.cpp  README.md  TestShuffles.cpp  TestUtils.h  generate_test_shuffles.py  test_shuffles.inl  tests.cpp
